--- a/index.html
+++ b/index.html
@@ -139,36 +139,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="../images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,36 +182,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,36 +225,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -292,36 +268,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -478,28 +446,28 @@
             <li class="footer-social-list-item">
               <a class="footer-social-link" href="">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-instagram2"></use>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a class="footer-social-link" href="">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a class="footer-social-link" href="">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a class="footer-social-link" href="">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </a>
             </li>
@@ -507,5 +475,101 @@
         </div>
       </div>
     </footer>
+    <!-- ============ BACKDROP ============ -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="order-form-text">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="order-form">
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-name">Name</label>
+            <div class="order-form-input-wrapper">
+              <input
+                class="order-form-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
+                title="Vlad"
+                required
+              />
+              <svg class="form-field-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-tel">Phone</label>
+            <div class="order-form-input-wrapper">
+              <input
+                class="order-form-input"
+                id="user-tel"
+                type="tel"
+                name="user-tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="form-field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-email">Email</label>
+            <div class="order-form-input-wrapper">
+              <input
+                class="order-form-input"
+                id="user-email"
+                type="email"
+                name="user-email"
+                required
+              />
+              <svg class="form-field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="order-form-comment"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              required
+            ></textarea>
+          </div>
+          <div class="order-form-checkbox-wrapper">
+            <input
+              class="order-form-checkbox visually-hidden"
+              id="privacy-policy"
+              type="checkbox"
+              name="privacy-policy"
+              value="true"
+              required
+            />
+            <label class="order-form-checkbox-label" for="privacy-policy">
+              <span class="order-form-own-checkbox">
+                <svg class="own-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="order-form-submit butn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
