--- a/index.html
+++ b/index.html
@@ -473,6 +473,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-subscribe-titele">Subscribe</p>
+          <form class="footer-form" name="subskribe-form">
+            <label class="foter-form-lable">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+                required
+            /></label>
+            <button class="footer-form-btn butn" type="submit">
+              Subscribe<svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- ============ BACKDROP ============ -->
