--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 title="Vlad"
                 required
               />
-              <svg class="form-field-icon" width="18" height="18">
+              <svg class="form-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -554,7 +554,7 @@
               </svg>
             </div>
           </div>
-          <div class="order-form-field-wrapper">
+          <div class="order-form-comment-wrapper">
             <label class="order-form-field-label" for="user-comment"
               >Comment</label
             >
@@ -569,13 +569,13 @@
           <div class="order-form-checkbox-wrapper">
             <input
               class="order-form-checkbox visually-hidden"
-              id="privacy-policy"
+              id="user-privacy"
               type="checkbox"
-              name="privacy-policy"
+              name="user-privacy"
               value="true"
               required
             />
-            <label class="order-form-checkbox-label" for="privacy-policy">
+            <label class="order-form-checkbox-label" for="user-privacy">
               <span class="order-form-own-checkbox">
                 <svg class="own-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
