--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="../images/icons.svg#icon-facebook1"></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
